--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,6 +1,21 @@
 *{
     margin: 0;
     padding: 0;
+    font-size: 0.95rem;
+}
+
+.navbar-brand span{
+  font-size: 1.5rem;
+  font-weight: 600;
+}
+
+.navbar input{
+  min-height: 48px;
+  color: #fff;
+  background-color: rgba(255, 255, 255, .1);
+  border-color: rgba(255, 255, 255, .1);
+  border-radius: 0;
+  padding: 0.5rem 1rem;
 }
 
 .sidebar{
@@ -11,4 +26,72 @@
   z-index: 100;
   padding: 48px 0 0;
   box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
+}
+
+.border-bottom{
+  border-bottom: 1px solid #e5e5e5;
+}
+
+.sidebar .nav-link i{
+  padding-right: 8px;
+}
+
+
+.sidebar .nav-link{
+  font-weight: 500;
+  color: #333;
+}
+
+.sidebar .nav-link.active{
+  color: #007bff;
+}
+
+.sidebar-heading span{
+  text-transform: uppercase;
+  margin-bottom: 8px;
+}
+
+/* Extra small devices (portrait phones, less than 576px) */
+@media (max-width: 575.98px) {
+  
+.navbar-brand span{
+  font-size: 1rem;
+}
+
+}
+
+/* Small devices (landscape phones, 576px and up) */
+@media (min-width: 576px) and (max-width: 767.98px) {
+
+  .navbar-brand span{
+    font-size: 1.1rem;
+  }
+
+}
+
+/* Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) and (max-width: 991.98px) {
+
+  .navbar-brand span{
+    font-size: 1rem;
+  }
+
+}
+
+/* Large devices (desktops, 992px and up) */
+@media (min-width: 992px) and (max-width: 1199.98px) {
+
+  .navbar-brand span{
+    font-size: 1.3rem;
+  }
+
+}
+
+/* Extra large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) {
+
+  .navbar-brand span{
+    font-size: 1.6rem;
+  }
+
 }
